<resources>

    <string name="app_name">KnowYourGame_new</string>
    <string name="title_home">Home</string>
    <string name="title_logout">Logout</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_info">Info</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_login">Login</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>

    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="text_btn_play">Play</string>
    <string name="text_close">Close</string>
    <string name="text_next">Next</string>
    <string name="text_choose_difficulty">Choose difficulty</string>
    <string name="text_answer">Answer</string>
    <string name="text_choose_answer">Choose answer</string>

    <string name="enter_message">Identify yourself!</string>
</resources>