<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/activity_authentication"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_message"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="21sp" />

        <EditText
            android:id="@+id/editLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/small_margin"
            android:layout_marginTop="145dp"
            android:layout_marginRight="@dimen/small_margin"

            android:hint="@string/prompt_login"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editLogin"

            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/small_margin"
            android:layout_marginRight="@dimen/small_margin"

            android:hint="@string/prompt_password"
            android:importantForAutofill="no"
            android:inputType="textVisiblePassword"
            android:textSize="30sp" />

        <LinearLayout
            android:id="@+id/btn_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editPassword"
            android:layout_marginTop="25dp">

            <Button
                android:id="@+id/button_sign_in"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/small_margin"
                android:layout_marginRight="@dimen/small_margin"
                android:layout_weight="1"
                android:text="@string/action_sign_in" />

            <Button
                android:id="@+id/button_sign_up"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/small_margin"
                android:layout_marginRight="@dimen/small_margin"
                android:layout_weight="1"
                android:text="@string/action_sign_up" />

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>